--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,7 @@
+
 <nav>
-  <ul>
+  <h1>{{projectTitle}}</h1>
+  <ul class="menu-categ">
     {{#each categories}}
       <li><a href="/{{this.id}}">{{this.name}}</a></li>
     {{/each}}
