--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+      {{>head}}  
+      </head>
   <body>
     {{> menu}} 
     {{{body}}}
