done eith the first page of the wireframes pdf

--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -3,7 +3,7 @@
   <h1>{{projectTitle}}</h1>
   <ul class="menu-categ">
     {{#each categories}}
-      <li><a href="/{{this.id}}">{{this.name}}</a></li>
+      <a href="/{{this.id}}"><li>{{this.name}}</li></a>
     {{/each}}
   </ul>
 </nav>
