--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,7 @@
 body {
-  padding: 50px;
+ 
+  width: 100vw;
+  height: 100vh;
 }
 
 a {
@@ -10,6 +12,8 @@ nav{
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: 90%;
+  margin: 0 auto;
 }
 .menu-categ{
   display: flex;
@@ -28,4 +32,40 @@ nav{
   border: 1px solid black;
   padding: 10px 20px;
   border-radius: 25px;
+}
+.category-page{
+  width: 90%;
+  margin: 0 auto;
+}
+.subcategory-page{
+  width: 90%;
+  margin: 0 auto;
+}
+.subcategory-list{
+  margin: 0;
+  padding: 0;
+}
+.subcategory{
+  text-decoration: none;
+  list-style-type: none;
+  margin: 0;
+  margin-top: 40px;
+  padding: 0;
+}
+.subcategory-name{
+  font-size: x-large;
+  font-weight: bold;
+  
+}
+.subcategory-img{
+  width: 100%;
+  margin:30px 0;
+}
+span{
+  display: block;
+  background: linear-gradient(to right, transparent, #5e7de296, transparent);
+  margin: 0 auto;
+  width: 100%;
+  height: 2px;
+  margin-top: 30px;
 }
