made the route and almost completed the second page of wireframe

--- a/views/category.hbs
+++ b/views/category.hbs
@@ -1,4 +1,5 @@
 <div class="category-page">
+  <p>Home/{{category.name}}</p>
 <h1>{{category.page_title}}</h1>
 <p>{{category.page_description}}</p>
   <ul>
