frontend partial done and multiple currency working

--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -1,1 +1,10 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
+ <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Viga"
+    />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Montserrat"
+  />
+  <script src="/javascripts/currency.js" defer></script>
