--- a/views/products.hbs
+++ b/views/products.hbs
@@ -33,7 +33,7 @@
             <p>Price: $ {{this.price}}</p>
             {{/ifeq}}
             <a href="/{{../rootRoute}}/{{../linkCateg2ID}}/{{this.primary_category_id}}/{{this.id}}" class="more-info">
-              <button class="more-info">More Info</button>
+              <button class="more-info view-products">More Info</button>
             </a>
           </div>
         </div>
