--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,11 @@ body {
   overflow-x: hidden;
   width: 100vw;
   height: 100vh;
+  display: flex;
+flex-direction: column;
+padding: 0;
+margin: 0;
+background-color: #f1f1f1;
 }
 
 a {
@@ -9,19 +14,34 @@ a {
   color: inherit;
 }
 nav{
+  width: 100%;
+  background-color: #ffffff; 
+   box-shadow: 1px 1px 18px rgb(184, 184, 184);
+}
+.nav{
   display: flex;
   flex-direction: row;
   align-items: center;
   width: 90%;
   margin: 0 auto;
+ 
+}
+.nav h1{
+  font-family: 'Viga';
+  font-size: xx-large;
+}
+.nav ul{
+  font-family: 'Viga';
+  font-size: large;
 }
 .menu-categ{
   display: flex;
   flex-direction: row;
   text-decoration: none;
-  color:black !important;
+  
+
   list-style-type: none;
-  gap: 20px;
+  gap: 40px;
   margin-left: auto;
   margin-right: 10px;
   font-size: large;
@@ -31,16 +51,119 @@ nav{
 .menu-categ li{
   border: 1px solid black;
   padding: 10px 20px;
+  background-color: #000000;
   border-radius: 25px;
+  color:rgb(255, 255, 255) !important;
 }
+.button {
+ 
+  position: relative;
+
+  border: none;
+  background: #fff;
+  transition: all 0.1s linear;
+ }
+ 
+ .button:active {
+  transform: scale(0.95);
+ }
+ 
+ .button label {
+  color: #ffffff;
+ }
+ 
+ .button .border {
+  position: absolute;
+  border: 0.1em solid #000000;
+  transition: all 0.2s 0.08s linear;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  transform: translate(-50%, -50%);
+ }
+ 
+ .button:hover .border {
+  display: block;
+  width: 115%;
+  height: 120%;
+ }
+ 
+ .menu-button {
+  border-radius: 2em;
+ }
+
+
 .category-page{
   width: 90%;
   margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 80px;
+  font-family: 'Montserrat';
+
+}
+.category-page h1{
+  font-family: 'Viga';
+}
+.category-page ul{
+  margin:0;
+  padding: 0;
+  border-radius: 15px;
+  border: 1px solid black;
+}
+.category-page ul li{
+  list-style: none;
+  padding: 20px 20px;border-radius: 15px;
+  border: 1px solid black;
+  background-color: #fff;
+  font-weight: bold;
+  font-size: large;
+  transition: 0.2s ease-in;
+}
+.category-page ul li:first-child{
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.category-page ul li:nth-child(2){
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+
+}
+.category-page ul li:last-child{
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  border-bottom: none;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+.category-page ul li:hover{
+  
+  background-color: #e8f7ff;
 }
 .subcategory-page{
   width: 90%;
   margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 80px;
+  font-family: 'Montserrat';
+
 }
+.subcategory-page h1{
+  font-family: 'Viga';
+}
+
 .subcategory-list{
   margin: 0;
   padding: 0;
@@ -50,7 +173,10 @@ nav{
   list-style-type: none;
   margin: 0;
   margin-top: 40px;
-  padding: 0;
+  padding: 15px;
+  background-color: #fff;
+  border-radius: 15px;
+  width: 100%;
 }
 .subcategory-name{
   font-size: x-large;
@@ -60,43 +186,118 @@ nav{
 .subcategory-img{
   width: 100%;
   margin:30px 0;
+  border-radius: 15px;
+  box-shadow: 1px 1px 18px rgb(192, 192, 192);
 }
-span{
+.view-products {
+  position: relative;
+  display: inline-block;
+  background: linear-gradient(to bottom, #93cbf1, #91c2d6);
+ /* Gradient background */
+  color: white;
+ /* White text color */
+  font-family: "Montserrat", sans-serif;
+ /* Stylish and legible font */
+  font-weight: bold;
+  font-size: 15px;
+ /* Large font size */
+  border: none;
+ /* No border */
+  border-radius: 30px;
+ /* Rounded corners */
+  padding: 14px 28px;
+ /* Large padding */
+  cursor: pointer;
+ /* Cursor on hover */
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+ /* Subtle shadow */
+  animation: button-shimmer 2s infinite;
+  transition: all 0.3s ease-in-out;
+ /* Smooth transition */
+}
+
+/* Hover animation */
+.view-products:hover {
+  background: linear-gradient(to bottom, #b5d8f0, #a1c6d4);
+  animation: button-particles 1s ease-in-out infinite;
+  transform: translateY(-2px);
+}
+
+/* Click animation */
+.view-products:active {
+  transform: scale(0.95);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+/* Shimmer animation */
+@keyframes button-shimmer {
+  0% {
+    background-position: left top;
+  }
+
+  100% {
+    background-position: right bottom;
+  }
+}
+
+/* Particle animation */
+@keyframes button-particles {
+  0% {
+    background-position: left top;
+  }
+
+  100% {
+    background-position: right bottom;
+  }
+}
+/* span{
   display: block;
   background: linear-gradient(to right, transparent, #5e7de296, transparent);
   margin: 0 auto;
   width: 100%;
   height: 2px;
   margin-top: 30px;
-}
+} */
 
 .products-page{
   width: 90%;
-  margin: 0 auto; 
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 80px;
+  font-family: 'Montserrat';
 
 }
 .products-list{
   width: 100%;
   display: grid;
-  grid-template-columns: 46% 46%;
+  grid-template-columns: 49% 49%;
   text-decoration: none;
   list-style-type: none;
-gap:70px;
+gap:40px;
 padding: 0;
  align-items: center;
  justify-content: center; 
 }
+.products-list li{
+  
+  background-color: #ffffff;
+  margin: 0;
+  padding: 10px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 18px rgb(182, 182, 182);
+}
 .product{
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 27% 67%;
   gap: 40px;
   align-items: center;
   justify-content: center; 
 }
 .product-name{
   font-size: larger;
-  font-weight: bold;
-  margin-left: -10px;
+ padding: 5px;
+ margin: 0;
+ font-family: 'Viga';
 
 }
 .product-desc{
@@ -105,6 +306,7 @@ padding: 0;
 }
 .product-img{
   margin: 0 auto;
+  border-radius: 15px;
 }
 .price-info{
   display: flex;
@@ -112,11 +314,15 @@ padding: 0;
 .more-info{
 margin-right: 0;
 margin-left: auto;
-height: 40px;
+font-size: 13px;
+margin-top: 3px;
 }
 .product-page{
   width: 90%;
-  margin: 0 auto; 
+  margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 80px;
+  font-family: 'Montserrat';
 
 }
 .product-page-grid{
@@ -124,16 +330,22 @@ height: 40px;
   height: auto;
   margin: 0 auto; 
 
-  margin-top: 80px;
+  margin-top: 40px;
   display: grid;
   grid-template-columns: 35% 65%;
-  gap: 40px;
+  gap: 10px;
   align-items: center;
   justify-content: center; 
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 15px;
+  box-shadow: 1px 1px 18px rgb(189, 189, 189);
 }
 .product-page-img{
-  width: 100%;
+  width: 90%;
   object-fit: contain;
+  border-radius: 15px;
+  margin: 0 auto;
 }
 .product-page-name{
   font-size: x-large;
@@ -158,11 +370,34 @@ height: 40px;
 }
 .buy-button{
   border-radius: 15px !important;
-  width: 100px;
-  height: 40px;
+  
 }
-.price{
+.price-container{
+  display: flex;
+  gap: 10px;
   margin-right: 50px;
 margin-left: auto;
 
+}
+#currency-selector{
+  height: 30px;
+  padding-left: 10px;
+  
+margin:auto 0;
+margin-left: 10px;
+}
+
+footer{
+  display: block;
+  width: 100%;
+  background-color: #ffffff96; 
+  margin-top: auto;
+  font-family: 'Montserrat';
+  box-shadow: 1px 1px 18px rgb(192, 192, 192);
+ 
+}
+footer .footer-text{
+ float: right;
+  padding:10px;
+  font-size: large;
 }
