--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,14 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
-<p>Product name is {{product.name}}</p>
-<p>Image link is {{productImg}}</p>
-<img src="{{productImg}}" alt="">
+<div class="index-page">
+    <div class="index-page-grid">
+        <div class="index-logo">
+            <h1 class="home-text">Outshine</br>
+                Standout</br>
+                Flourish</h1>
+        </div>
+        <div>
+            <img src="/images/index.svg" class="index-img">
 
+        </div>
+    </div>
+
+</div>
