--- a/views/partials/menu.hbs
+++ b/views/partials/menu.hbs
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav"><h1>{{projectTitle}}</h1>
+  <div class="nav"><h1><a href="/">{{projectTitle}}</a></h1>
   <ul class="menu-categ">
     {{#each categories}}
       <a href="/{{this.id}}">
