--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -7,4 +7,8 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Montserrat"
   />
+   <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Borel"
+  />
   <script src="/javascripts/currency.js" defer></script>
