no px styles in css

--- a/views/products.hbs
+++ b/views/products.hbs
@@ -25,7 +25,7 @@
           {{/each}}
         </div>
 
-        <div>
+        <div class="products-info"> 
 
           <p class="product-desc">{{this.page_description}}</p>
           <div class="price-info">
