--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
 @keyframes animationgradienttitle {
   0% {
-      background-position: 0 1600px;
+      background-position: 0 20em;
   }
   100% {
-      background-position: 1600px 0;
+      background-position: 20em 0;
   }
 }
 
@@ -21,8 +21,8 @@ background-color: #f1f1f1;
   width: 90%;
   height: 100%;
   margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 50px;
+  margin-top: 2%;
+  margin-bottom: 3%;
   font-family: 'Montserrat';
 
 }
@@ -46,11 +46,10 @@ object-fit: cover;
 }
 .index-logo h1{
   position: relative;
-  text-shadow: 3px 3px 18px rgb(224, 224, 224);
-
+  text-shadow: 0.2em 0.2em 1.2em rgb(224, 224, 224);
   font-family: 'Borel';
-z-index: 1;
-font-size: 60px;
+  z-index: 1;
+  font-size: 3.75rem;
 }
 
 
@@ -63,8 +62,8 @@ a {
   
   color: #3835fc;
   background: -webkit-linear-gradient(left, #46a8d6,#1827ac , #2440e0);
-  background-size: 1600px 200px;
-  -webkit-background-clip: text;
+  background-size: 20em 2.5em;
+    -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   animation-duration: 3s;
   animation-name: animationgradienttitle;
@@ -74,7 +73,7 @@ a {
 nav{
   width: 100%;
   background-color: #ffffff; 
-   box-shadow: 1px 1px 18px rgb(184, 184, 184);
+  box-shadow: 0.1em 0.1em 1.9em rgb(184, 184, 184);
 }
 .nav{
   display: flex;
@@ -92,26 +91,25 @@ nav{
   font-family: 'Viga';
   font-size: large;
 }
-.menu-categ{
+.menu-categ {
   display: flex;
   flex-direction: row;
   text-decoration: none;
-  
-
   list-style-type: none;
-  gap: 40px;
+  gap: 2.5em;
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 0.625em;
   font-size: large;
   align-items: center;
   justify-content: center;
 }
-.menu-categ li{
-  border: 1px solid black;
-  padding: 10px 20px;
+
+.menu-categ li {
+  border: 0.1em solid black;
+  padding: 0.625em 1.25em;
   background-color: #000000;
-  border-radius: 25px;
-  color:rgb(255, 255, 255) !important;
+  border-radius: 2em;
+  color: rgb(255, 255, 255) !important;
 }
 .button {
  
@@ -155,8 +153,8 @@ nav{
 .category-page{
   width: 90%;
   margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 80px;
+  margin-top: 2%;
+  margin-bottom: 3%;
   font-family: 'Montserrat';
 
 }
@@ -166,13 +164,14 @@ nav{
 .category-page ul{
   margin:0;
   padding: 0;
-  border-radius: 15px;
-  border: 1px solid black;
+  border-radius: 1.7em;
+  border: 0.05em solid black;
 }
 .category-page ul li{
   list-style: none;
-  padding: 20px 20px;border-radius: 15px;
-  border: 1px solid black;
+  padding: 1.2em 1.2em; 
+  border-radius: 1.7em;
+  border: 0.05em solid black;
   background-color: #fff;
   font-weight: bold;
   font-size: large;
@@ -203,8 +202,8 @@ nav{
   border-bottom: none;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 1.7em;
+  border-bottom-right-radius: 1.7em;
 }
 .category-page ul li:hover{
   
@@ -213,8 +212,8 @@ nav{
 .subcategory-page{
   width: 90%;
   margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 80px;
+  margin-top: 2%;
+  margin-bottom: 3%;
   font-family: 'Montserrat';
 
 }
@@ -230,10 +229,10 @@ nav{
   text-decoration: none;
   list-style-type: none;
   margin: 0;
-  margin-top: 40px;
-  padding: 15px;
+  margin-top: 2em;
+  padding: 1em;
   background-color: #fff;
-  border-radius: 15px;
+  border-radius: 1.7em;
   width: 100%;
 }
 .subcategory-name{
@@ -243,49 +242,41 @@ nav{
 }
 .subcategory-img{
   width: 100%;
-  margin:30px 0;
-  border-radius: 15px;
-  box-shadow: 1px 1px 18px rgb(192, 192, 192);
+  margin: 1.6em 0; 
+  border-radius:1em;
+  box-shadow: 0.05em 0.05em 1.125em rgb(192, 192, 192); 
+
 }
 .view-products {
   position: relative;
   display: inline-block;
-  background: linear-gradient(to bottom, #93cbf1, #91c2d6);
- /* Gradient background */
-  color: white;
- /* White text color */
-  font-family: "Montserrat", sans-serif;
- /* Stylish and legible font */
+  background: linear-gradient(to bottom, #93cbf1, #91c2d6); 
+  color: white; 
+  font-family: "Montserrat", sans-serif; 
   font-weight: bold;
-  font-size: 15px;
- /* Large font size */
+  font-size: 0.9em; 
   border: none;
- /* No border */
-  border-radius: 30px;
- /* Rounded corners */
-  padding: 14px 28px;
- /* Large padding */
-  cursor: pointer;
- /* Cursor on hover */
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
- /* Subtle shadow */
+  border-radius: 1.875em; 
+  padding: 0.875em 2.25em; 
+  cursor: pointer; 
+  box-shadow: 0 0.3125em 0.9375em rgba(0, 0, 0, 0.2); 
   animation: button-shimmer 2s infinite;
-  transition: all 0.3s ease-in-out;
- /* Smooth transition */
+  transition: all 0.3s ease-in-out; 
 }
 
 /* Hover animation */
 .view-products:hover {
   background: linear-gradient(to bottom, #b5d8f0, #a1c6d4);
   animation: button-particles 1s ease-in-out infinite;
-  transform: translateY(-2px);
+  transform: translateY(-0.125em); 
 }
 
 /* Click animation */
 .view-products:active {
   transform: scale(0.95);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0.125em 0.625em rgba(0, 0, 0, 0.3); 
 }
+
 
 /* Shimmer animation */
 @keyframes button-shimmer {
@@ -320,8 +311,8 @@ nav{
 .products-page{
   width: 90%;
   margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 80px;
+  margin-top: 2%;
+  margin-bottom: 3%;
   font-family: 'Montserrat';
 
 }
@@ -331,7 +322,7 @@ nav{
   grid-template-columns: 49% 49%;
   text-decoration: none;
   list-style-type: none;
-gap:40px;
+gap:2em;
 padding: 0;
  align-items: center;
  justify-content: center; 
@@ -340,20 +331,27 @@ padding: 0;
   
   background-color: #ffffff;
   margin: 0;
-  padding: 10px;
-  border-radius: 15px;
-  box-shadow: 1px 1px 18px rgb(182, 182, 182);
+  padding: 0.9em;
+  border-radius: 0.9em;
+  box-shadow: 0.1em 0.1em 1em rgb(182, 182, 182);
 }
 .product{
   display: grid;
-  grid-template-columns: 27% 67%;
-  gap: 40px;
+  width: 100%;
+  grid-template-columns: 30% 64%;
+  gap:1.3em;
   align-items: center;
   justify-content: center; 
 }
+.products-info{
+  width:100%;
+ 
+  
+}
 .product-name{
   font-size: larger;
- padding: 5px;
+ padding: 0.3em;
+ padding-bottom: 0.3em;
  margin: 0;
  font-family: 'Viga';
 
@@ -361,25 +359,29 @@ padding: 0;
 .product-desc{
   width: 100%;
   text-align: justify;
+  word-wrap: break-word;
 }
+
 .product-img{
+  width: 100%;
   margin: 0 auto;
-  border-radius: 15px;
+  border-radius: 1.3em;
 }
 .price-info{
   display: flex;
+  margin-top: 2em;
 }
 .more-info{
 margin-right: 0;
 margin-left: auto;
-font-size: 13px;
-margin-top: 3px;
+font-size: 0.9em;
+margin-top: 0.2em;
 }
 .product-page{
   width: 90%;
   margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 80px;
+  margin-top: 2%;
+  margin-bottom: 3%;
   font-family: 'Montserrat';
 
 }
@@ -388,21 +390,21 @@ margin-top: 3px;
   height: auto;
   margin: 0 auto; 
 
-  margin-top: 40px;
+  margin-top: 2.5em;
   display: grid;
   grid-template-columns: 35% 65%;
-  gap: 10px;
+  gap: 0.7em;
   align-items: center;
   justify-content: center; 
   background-color: #fff;
-  padding: 20px;
-  border-radius: 15px;
-  box-shadow: 1px 1px 18px rgb(189, 189, 189);
+  padding: 1.25em;
+  border-radius: 1.5em;
+  box-shadow: 0.1em 0.1em 1.8em rgb(189, 189, 189);
 }
 .product-page-img{
-  width: 90%;
+  width: 95%;
   object-fit: contain;
-  border-radius: 15px;
+  border-radius: 1.5em;
   margin: 0 auto;
 }
 .product-page-name{
@@ -427,22 +429,22 @@ margin-top: 3px;
   align-items: center;
 }
 .buy-button{
-  border-radius: 15px !important;
+  border-radius: 1.5em !important;
   
 }
 .price-container{
   display: flex;
-  gap: 10px;
-  margin-right: 50px;
+  gap: 0.9em;
+  margin-right: 2em;
 margin-left: auto;
 
 }
 #currency-selector{
-  height: 30px;
-  padding-left: 10px;
+  height: 1.9em;
+  padding-left: 0.5em;
   
 margin:auto 0;
-margin-left: 10px;
+margin-left: 1em;
 }
 
 footer{
@@ -451,11 +453,11 @@ footer{
   background-color: #ffffff96; 
   margin-top: auto;
   font-family: 'Montserrat';
-  box-shadow: 1px 1px 18px rgb(192, 192, 192);
+  box-shadow: 0.1em 0.1em 1.8em rgb(192, 192, 192);
  
 }
 footer .footer-text{
  float: right;
-  padding:10px;
+  padding:0.8em;
   font-size: large;
 }
