--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -338,6 +338,7 @@ padding: 0;
 .product{
   display: grid;
   width: 100%;
+  height: 14em;
   grid-template-columns: 30% 64%;
   gap:1.3em;
   align-items: center;
@@ -349,13 +350,14 @@ padding: 0;
   
 }
 .product-name{
-  font-size: larger;
+  font-size: 1.4em;
  padding: 0.3em;
  padding-bottom: 0.3em;
  margin: 0;
  font-family: 'Viga';
-
+ white-space: nowrap;
 }
+
 .product-desc{
   width: 100%;
   text-align: justify;
